Спринт 2. 1ая итерация проверки

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
     <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+ <!--    <link rel="stylesheet" href="styles/style.css" /> -->
     <link rel="stylesheet" href="blocks\page\page.css" />
     <link rel="stylesheet" href="blocks\header\header.css" />
     <link rel="stylesheet" href="blocks\logo\logo.css" />
@@ -25,25 +25,22 @@
       href="blocks\header\__square-pic\header__square-pic.css"
     />
     <link rel="stylesheet" href="blocks\description\description.css" />
+    <link rel="stylesheet" href="blocks\two-columns\two-columns.css" />
     <link
       rel="stylesheet"
-      href="blocks\description\two-columns\two-columns.css"
+      href="blocks\two-columns\__main-text\two-columns__main-text.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\description\two-columns\__main-text\two-columns__main-text.css"
+      href="blocks\two-columns\__brief\two-columns__brief.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\description\two-columns\__brief\two-columns__brief.css"
+      href="blocks\two-columns\__paragraph\two-columns__paragraph.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\description\two-columns\__paragraph\two-columns__paragraph.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks\description\two-columns\__span-accent\two-columns__span-accent.css"
+      href="blocks\two-columns\__span-accent\two-columns__span-accent.css"
     />
     <link rel="stylesheet" href="blocks\digits\digits.css" />
     <link rel="stylesheet" href="blocks\section-title\section-title.css" />
@@ -105,6 +102,46 @@
       rel="stylesheet"
       href="blocks\footer\__column-link\footer__column-link.css"
     />
+    <link rel="stylesheet" href="blocks\rotation\rotation.css" />
+    <link rel="stylesheet" href="blocks\techniques\techniques.css" />
+    <link rel="stylesheet" href="blocks\cards\cards.css" />
+    <link rel="stylesheet" href="blocks\cards\__item\cards__item.css" />
+    <link rel="stylesheet" href="blocks\cards\__image\cards__image.css" />
+    <link rel="stylesheet" href="blocks\cards\__title\cards__title.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\cards\__description\cards__description.css"
+    />
+    <link rel="stylesheet" href="blocks\video\video.css" />
+    <link rel="stylesheet" href="blocks\video\__iframes\video__iframes.css" />
+    <link rel="stylesheet" href="blocks\video\__iframe\video__iframe.css" />
+    <link rel="stylesheet" href="blocks\oakley\oakley.css" />
+    <link rel="stylesheet" href="blocks\khan\khan.css" />
+    <link rel="stylesheet" href="blocks\khan\__container\khan__container.css" />
+    <link rel="stylesheet" href="blocks\khan\__author\khan__author.css" />
+    <link rel="stylesheet" href="blocks\khan\__tittle\khan__tittle.css" />
+    <link rel="stylesheet" href="blocks\khan\__quote\khan__quote.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\khan\__quote-author\khan__quote-author.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\khan\__quote-author-subline\khan__quote-author-subline.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks\khan\__book-container\khan__book-container.css"
+    />
+    <link rel="stylesheet" href="blocks\khan\__book-pik\khan__book-pik.css" />
+    <link rel="stylesheet" href="blocks\khan\__buy-link\khan__buy-link.css" />
+    <link rel="stylesheet" href="blocks\resources\resources.css" />
+    <link
+      rel="stylesheet"
+      href="blocks\resources\__logo-zone\resources__logo-zone.css"
+    />
+    <link rel="stylesheet" href="blocks\resources\__link\resources__link.css" />
+    <link rel="stylesheet" href="blocks\resources\__logo\resources__logo.css" />
   </head>
 
   <body>
@@ -129,8 +166,100 @@
         <div class="header__square-pic"></div>
       </header>
 
-      <main>
-        <section class="description" id="trubles-in-learning">
+      <main class="content">
+        <section class="techniques" id="trubles-in-learning">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <div class="cards">
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="blocks\images\cards-attention.png"
+                alt="101 эссе, которые изменят ваше мышление"
+              />
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать сфокусированное и
+                рассеянное мышление.
+              </p>
+              <img
+                class="cards__image"
+                src="blocks\images\cards-question.png"
+                alt="Вопросы"
+              />
+            </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="blocks\images\cards-recall.png"
+                alt="Скульптура думающего юноши"
+              />
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит соединить разрозненные
+                порции памяти.
+              </p>
+              <img
+                class="cards__image"
+                src="blocks\images\cards-competence.png"
+                alt="Книги"
+              />
+            </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="blocks\images\cards-interliving.png"
+                alt="окулус, Нью-Йорк"
+              />
+              <h3 class="cards__title">Интервливинг</h3>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, они обогащают друг
+                друга.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <section class="video">
+          <h2 class="section-title">Видео на TED</h2>
+          <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+          <div class="video__iframes">
+            <iframe
+              class="video__iframe"
+              width="515px"
+              height="316px"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              title="YouTube video player"
+              allowfullscreen
+            ></iframe>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              title="YouTube video player"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+
+        <section class="oakley">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <!--         <section class="description" id="trubles-in-learning">
           <div class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
@@ -153,6 +282,13 @@
               </p>
             </div>
           </div>
+        </section> -->
+
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть</p>
+          <a class="feynman__link" href="#!">Подробнее &rarr;</a>
+          <img class="feynman__img" src="images/feynman.png" alt="Фейман" />
         </section>
 
         <section class="digits">
@@ -205,11 +341,28 @@
           </div>
         </section>
 
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть</p>
-          <a class="feynman__link" href="#!">Подробнее &rarr;</a>
-          <img class="feynman__img" src="images/feynman.png" alt="Фейман" />
+        <section class="khan">
+          <div class="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__tittle">Весь мир - школа</h2>
+            <p class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.
+            </p>
+            <p class="khan__quote-author">Джорж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
+            <div class="khan__book-container">
+              <img
+                class="khan__book-pik"
+                src="images\khan-book.jpg"
+                alt="Весь мир - школа"
+              />
+              <a class="khan__buy-link" href="#!">Купить книгу &rarr;</a>
+            </div>
+          </div>
         </section>
 
         <section class="kaufman">
@@ -269,6 +422,36 @@
               </p>
             </div>
             <div class="kaufman__triangle"></div>
+          </div>
+        </section>
+
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </p>
+          <div class="resources__logo-zone">
+            <a class="resources__link" href="#!"
+              ><img
+                class="resources__logo"
+                src="images\logo\resources-arzamas.svg"
+                alt="Арзамас"
+            /></a>
+            <a class="resources__link" href="#!"><img
+                class="resources__logo"
+                src="images\logo\resources-n1.svg"
+                alt="Н+1"
+            /></a></a>
+            <a class="resources__link" href="#!"><img
+                class="resources__logo"
+                src="images\logo\resources-strelka.svg"
+                alt="Стрелка"
+            /></a></a>
+            <a class="resources__link" href="#!"><img
+                class="resources__logo"
+                src="images\logo\resources-polka.svg"
+                alt="Полка"
+            /></a></a>
           </div>
         </section>
       </main>
