Спринт 2. 1ая итерация проверки. Добавлен readme. HTML прогнан через валидатор

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
     <link rel="stylesheet" href="styles/normalize.css" />
- <!--    <link rel="stylesheet" href="styles/style.css" /> -->
+    <!--    <link rel="stylesheet" href="styles/style.css" /> -->
     <link rel="stylesheet" href="blocks\page\page.css" />
     <link rel="stylesheet" href="blocks\header\header.css" />
     <link rel="stylesheet" href="blocks\logo\logo.css" />
@@ -226,8 +226,6 @@
           <div class="video__iframes">
             <iframe
               class="video__iframe"
-              width="515px"
-              height="316px"
               src="https://www.youtube.com/embed/arj7oStGLkU"
               title="YouTube video player"
               allowfullscreen
@@ -437,21 +435,24 @@
                 src="images\logo\resources-arzamas.svg"
                 alt="Арзамас"
             /></a>
-            <a class="resources__link" href="#!"><img
+            <a class="resources__link" href="#!"
+              ><img
                 class="resources__logo"
                 src="images\logo\resources-n1.svg"
                 alt="Н+1"
-            /></a></a>
-            <a class="resources__link" href="#!"><img
+            /></a>
+            <a class="resources__link" href="#!"
+              ><img
                 class="resources__logo"
                 src="images\logo\resources-strelka.svg"
                 alt="Стрелка"
-            /></a></a>
-            <a class="resources__link" href="#!"><img
+            /></a>
+            <a class="resources__link" href="#!"
+              ><img
                 class="resources__logo"
                 src="images\logo\resources-polka.svg"
                 alt="Полка"
-            /></a></a>
+            /></a>
           </div>
         </section>
       </main>
