Спринт 2. 1ая итерация проверки. Добавлен readme. HTML прогнан через валидатор.

--- a/index.html
+++ b/index.html
@@ -5,143 +5,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
     <link rel="stylesheet" href="styles/normalize.css" />
-    <!--    <link rel="stylesheet" href="styles/style.css" /> -->
-    <link rel="stylesheet" href="blocks\page\page.css" />
-    <link rel="stylesheet" href="blocks\header\header.css" />
-    <link rel="stylesheet" href="blocks\logo\logo.css" />
-    <link rel="stylesheet" href="blocks\logo\_place\logo_place_header.css" />
-    <link rel="stylesheet" href="blocks\header\__title\header__title.css" />
+    <!--    <link rel="stylesheet" href="styles/style.css" > -->
+    <link rel="stylesheet" href="blocks/page/page.css" />
+    <link rel="stylesheet" href="blocks/header/header.css" />
+    <link rel="stylesheet" href="blocks/logo/logo.css" />
+    <link rel="stylesheet" href="blocks/logo/_place/logo_place_header.css" />
+    <link rel="stylesheet" href="blocks/header/__title/header__title.css" />
     <link
       rel="stylesheet"
-      href="blocks\header\__subtittle\header__subtitle.css"
+      href="blocks/header/__subtittle/header__subtitle.css"
     />
-    <link rel="stylesheet" href="blocks\header\__link\header__link.css" />
+    <link rel="stylesheet" href="blocks/header/__link/header__link.css" />
     <link
       rel="stylesheet"
-      href="blocks\header\__main-illustration\header__main-illustration.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks\header\__square-pic\header__square-pic.css"
-    />
-    <link rel="stylesheet" href="blocks\description\description.css" />
-    <link rel="stylesheet" href="blocks\two-columns\two-columns.css" />
-    <link
-      rel="stylesheet"
-      href="blocks\two-columns\__main-text\two-columns__main-text.css"
+      href="blocks/header/__main-illustration/header__main-illustration.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\two-columns\__brief\two-columns__brief.css"
+      href="blocks/header/__square-pic/header__square-pic.css"
+    />
+    <link rel="stylesheet" href="blocks/description/description.css" />
+    <link rel="stylesheet" href="blocks/two-columns/two-columns.css" />
+    <link
+      rel="stylesheet"
+      href="blocks/two-columns/__main-text/two-columns__main-text.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\two-columns\__paragraph\two-columns__paragraph.css"
+      href="blocks/two-columns/__brief/two-columns__brief.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\two-columns\__span-accent\two-columns__span-accent.css"
-    />
-    <link rel="stylesheet" href="blocks\digits\digits.css" />
-    <link rel="stylesheet" href="blocks\section-title\section-title.css" />
-    <link
-      rel="stylesheet"
-      href="blocks\section-subtitle\section-subtitle.css"
-    />
-    <link rel="stylesheet" href="blocks\table\table.css" />
-    <link rel="stylesheet" href="blocks\table\__cell\table__cell.css" />
-    <link rel="stylesheet" href="blocks\table\__heading\table__heading.css" />
-    <link rel="stylesheet" href="blocks\table\__text\table__text.css" />
-    <link rel="stylesheet" href="blocks\feynman\feynman.css" />
-    <link rel="stylesheet" href="blocks\feynman\__title\feynman__title.css" />
-    <link
-      rel="stylesheet"
-      href="blocks\feynman\__subtitle\feynman__subtitle.css"
-    />
-    <link rel="stylesheet" href="blocks\feynman\__link\feynman__link.css" />
-    <link rel="stylesheet" href="blocks\feynman\__img\feynman__img.css" />
-    <link rel="stylesheet" href="blocks\kaufman\kaufman.css" />
-    <link
-      rel="stylesheet"
-      href="blocks\section-title\_theme\section-title_theme_dark.css"
+      href="blocks/two-columns/__paragraph/two-columns__paragraph.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\section-subtitle\_theme\section-subtitle_theme_dark.css"
+      href="blocks/two-columns/__span-accent/two-columns__span-accent.css"
     />
-    <link rel="stylesheet" href="blocks\table\_theme\table_theme_dark.css" />
+    <link rel="stylesheet" href="blocks/digits/digits.css" />
+    <link rel="stylesheet" href="blocks/section-title/section-title.css" />
     <link
       rel="stylesheet"
-      href="blocks\table\__cell\_theme\table__cell_theme_dark.css"
+      href="blocks/section-subtitle/section-subtitle.css"
     />
+    <link rel="stylesheet" href="blocks/table/table.css" />
+    <link rel="stylesheet" href="blocks/table/__cell/table__cell.css" />
+    <link rel="stylesheet" href="blocks/table/__heading/table__heading.css" />
+    <link rel="stylesheet" href="blocks/table/__text/table__text.css" />
+    <link rel="stylesheet" href="blocks/feynman/feynman.css" />
+    <link rel="stylesheet" href="blocks/feynman/__title/feynman__title.css" />
     <link
       rel="stylesheet"
-      href="blocks\kaufman\__triangle\kaufman__triangle.css"
+      href="blocks/feynman/__subtitle/feynman__subtitle.css"
     />
-    <link rel="stylesheet" href="blocks\footer\footer.css" />
-    <link rel="stylesheet" href="blocks\footer\__columns\footer__columns.css" />
-    <link rel="stylesheet" href="blocks\footer\__column\footer__column.css" />
+    <link rel="stylesheet" href="blocks/feynman/__link/feynman__link.css" />
+    <link rel="stylesheet" href="blocks/feynman/__img/feynman__img.css" />
+    <link rel="stylesheet" href="blocks/kaufman/kaufman.css" />
     <link
       rel="stylesheet"
-      href="blocks\footer\__column\_content\footer__column_content_copyright.css"
-    />
-    <link rel="stylesheet" href="blocks\footer\__author\footer__author.css" />
-    <link
-      rel="stylesheet"
-      href="blocks\footer\__column-heading\footer__column-heading.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks\footer\__column-links\footer__column-links.css"
-    />
-    <link
-      rel="stylesheet"
-      href="blocks\footer\__social-icon\footer__social-icon.css"
+      href="blocks/section-title/_theme/section-title_theme_dark.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\footer\__column-link\footer__column-link.css"
+      href="blocks/section-subtitle/_theme/section-subtitle_theme_dark.css"
     />
-    <link rel="stylesheet" href="blocks\rotation\rotation.css" />
-    <link rel="stylesheet" href="blocks\techniques\techniques.css" />
-    <link rel="stylesheet" href="blocks\cards\cards.css" />
-    <link rel="stylesheet" href="blocks\cards\__item\cards__item.css" />
-    <link rel="stylesheet" href="blocks\cards\__image\cards__image.css" />
-    <link rel="stylesheet" href="blocks\cards\__title\cards__title.css" />
+    <link rel="stylesheet" href="blocks/table/_theme/table_theme_dark.css" />
     <link
       rel="stylesheet"
-      href="blocks\cards\__description\cards__description.css"
-    />
-    <link rel="stylesheet" href="blocks\video\video.css" />
-    <link rel="stylesheet" href="blocks\video\__iframes\video__iframes.css" />
-    <link rel="stylesheet" href="blocks\video\__iframe\video__iframe.css" />
-    <link rel="stylesheet" href="blocks\oakley\oakley.css" />
-    <link rel="stylesheet" href="blocks\khan\khan.css" />
-    <link rel="stylesheet" href="blocks\khan\__container\khan__container.css" />
-    <link rel="stylesheet" href="blocks\khan\__author\khan__author.css" />
-    <link rel="stylesheet" href="blocks\khan\__tittle\khan__tittle.css" />
-    <link rel="stylesheet" href="blocks\khan\__quote\khan__quote.css" />
-    <link
-      rel="stylesheet"
-      href="blocks\khan\__quote-author\khan__quote-author.css"
+      href="blocks/table/__cell/_theme/table__cell_theme_dark.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\khan\__quote-author-subline\khan__quote-author-subline.css"
+      href="blocks/kaufman/__triangle/kaufman__triangle.css"
+    />
+    <link rel="stylesheet" href="blocks/footer/footer.css" />
+    <link rel="stylesheet" href="blocks/footer/__columns/footer__columns.css" />
+    <link rel="stylesheet" href="blocks/footer/__column/footer__column.css" />
+    <link
+      rel="stylesheet"
+      href="blocks/footer/__column/_content/footer__column_content_copyright.css"
+    />
+    <link rel="stylesheet" href="blocks/footer/__author/footer__author.css" />
+    <link
+      rel="stylesheet"
+      href="blocks/footer/__column-heading/footer__column-heading.css"
     />
     <link
       rel="stylesheet"
-      href="blocks\khan\__book-container\khan__book-container.css"
+      href="blocks/footer/__column-links/footer__column-links.css"
     />
-    <link rel="stylesheet" href="blocks\khan\__book-pik\khan__book-pik.css" />
-    <link rel="stylesheet" href="blocks\khan\__buy-link\khan__buy-link.css" />
-    <link rel="stylesheet" href="blocks\resources\resources.css" />
     <link
       rel="stylesheet"
-      href="blocks\resources\__logo-zone\resources__logo-zone.css"
+      href="blocks/footer/__social-icon/footer__social-icon.css"
     />
-    <link rel="stylesheet" href="blocks\resources\__link\resources__link.css" />
-    <link rel="stylesheet" href="blocks\resources\__logo\resources__logo.css" />
+    <link
+      rel="stylesheet"
+      href="blocks/footer/__column-link/footer__column-link.css"
+    />
+    <link rel="stylesheet" href="blocks/rotation/rotation.css" />
+    <link rel="stylesheet" href="blocks/techniques/techniques.css" />
+    <link rel="stylesheet" href="blocks/cards/cards.css" />
+    <link rel="stylesheet" href="blocks/cards/__item/cards__item.css" />
+    <link rel="stylesheet" href="blocks/cards/__image/cards__image.css" />
+    <link rel="stylesheet" href="blocks/cards/__title/cards__title.css" />
+    <link
+      rel="stylesheet"
+      href="blocks/cards/__description/cards__description.css"
+    />
+    <link rel="stylesheet" href="blocks/video/video.css" />
+    <link rel="stylesheet" href="blocks/video/__iframes/video__iframes.css" />
+    <link rel="stylesheet" href="blocks/video/__iframe/video__iframe.css" />
+    <link rel="stylesheet" href="blocks/oakley/oakley.css" />
+    <link rel="stylesheet" href="blocks/khan/khan.css" />
+    <link rel="stylesheet" href="blocks/khan/__container/khan__container.css" />
+    <link rel="stylesheet" href="blocks/khan/__author/khan__author.css" />
+    <link rel="stylesheet" href="blocks/khan/__tittle/khan__tittle.css" />
+    <link rel="stylesheet" href="blocks/khan/__quote/khan__quote.css" />
+    <link
+      rel="stylesheet"
+      href="blocks/khan/__quote-author/khan__quote-author.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks/khan/__quote-author-subline/khan__quote-author-subline.css"
+    />
+    <link
+      rel="stylesheet"
+      href="blocks/khan/__book-container/khan__book-container.css"
+    />
+    <link rel="stylesheet" href="blocks/khan/__book-pik/khan__book-pik.css" />
+    <link rel="stylesheet" href="blocks/khan/__buy-link/khan__buy-link.css" />
+    <link rel="stylesheet" href="blocks/resources/resources.css" />
+    <link
+      rel="stylesheet"
+      href="blocks/resources/__logo-zone/resources__logo-zone.css"
+    />
+    <link rel="stylesheet" href="blocks/resources/__link/resources__link.css" />
+    <link rel="stylesheet" href="blocks/resources/__logo/resources__logo.css" />
   </head>
 
   <body>
@@ -149,7 +149,7 @@
       <header class="header">
         <img
           class="logo logo_place_header"
-          src="blocks\images\logo\logo_place_header.svg"
+          src="blocks/images/logo/logo_place_header.svg"
           alt="Лого Яндекс Практикум"
         />
         <h1 class="header__title">Научиться учиться</h1>
@@ -160,7 +160,7 @@
         </p>
         <img
           class="header__main-illustration"
-          src="blocks\images\header-image\header-image.png"
+          src="blocks/images/header-image/header-image.png"
           alt="изображение шапки"
         />
         <div class="header__square-pic"></div>
@@ -174,7 +174,7 @@
             <div class="cards__item">
               <img
                 class="cards__image"
-                src="blocks\images\cards-attention.png"
+                src="blocks/images/cards-attention.png"
                 alt="101 эссе, которые изменят ваше мышление"
               />
               <h3 class="cards__title">Два вида внимания</h3>
@@ -184,14 +184,14 @@
               </p>
               <img
                 class="cards__image"
-                src="blocks\images\cards-question.png"
+                src="blocks/images/cards-question.png"
                 alt="Вопросы"
               />
             </div>
             <div class="cards__item">
               <img
                 class="cards__image"
-                src="blocks\images\cards-recall.png"
+                src="blocks/images/cards-recall.png"
                 alt="Скульптура думающего юноши"
               />
               <h3 class="cards__title">Recall</h3>
@@ -201,14 +201,14 @@
               </p>
               <img
                 class="cards__image"
-                src="blocks\images\cards-competence.png"
+                src="blocks/images/cards-competence.png"
                 alt="Книги"
               />
             </div>
             <div class="cards__item">
               <img
                 class="cards__image"
-                src="blocks\images\cards-interliving.png"
+                src="blocks/images/cards-interliving.png"
                 alt="окулус, Нью-Йорк"
               />
               <h3 class="cards__title">Интервливинг</h3>
@@ -355,7 +355,7 @@
             <div class="khan__book-container">
               <img
                 class="khan__book-pik"
-                src="images\khan-book.jpg"
+                src="images/khan-book.jpg"
                 alt="Весь мир - школа"
               />
               <a class="khan__buy-link" href="#!">Купить книгу &rarr;</a>
@@ -432,25 +432,25 @@
             <a class="resources__link" href="#!"
               ><img
                 class="resources__logo"
-                src="images\logo\resources-arzamas.svg"
+                src="images/logo/resources-arzamas.svg"
                 alt="Арзамас"
             /></a>
             <a class="resources__link" href="#!"
               ><img
                 class="resources__logo"
-                src="images\logo\resources-n1.svg"
+                src="images/logo/resources-n1.svg"
                 alt="Н+1"
             /></a>
             <a class="resources__link" href="#!"
               ><img
                 class="resources__logo"
-                src="images\logo\resources-strelka.svg"
+                src="images/logo/resources-strelka.svg"
                 alt="Стрелка"
             /></a>
             <a class="resources__link" href="#!"
               ><img
                 class="resources__logo"
-                src="images\logo\resources-polka.svg"
+                src="images/logo/resources-polka.svg"
                 alt="Полка"
             /></a>
           </div>
