--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <!--    <link rel="stylesheet" href="styles/style.css" > -->
-    <link rel="stylesheet" href="blocks/page/page.css" />
+    <!--  <link rel="stylesheet" href="styles/normalize.css" /> -->
+    <link rel="stylesheet" href="pages/index.css" />
+    <!--     <link rel="stylesheet" href="blocks/page/page.css" />
     <link rel="stylesheet" href="blocks/header/header.css" />
     <link rel="stylesheet" href="blocks/logo/logo.css" />
     <link rel="stylesheet" href="blocks/logo/_place/logo_place_header.css" />
@@ -141,7 +141,7 @@
       href="blocks/resources/__logo-zone/resources__logo-zone.css"
     />
     <link rel="stylesheet" href="blocks/resources/__link/resources__link.css" />
-    <link rel="stylesheet" href="blocks/resources/__logo/resources__logo.css" />
+    <link rel="stylesheet" href="blocks/resources/__logo/resources__logo.css" /> -->
   </head>
 
   <body>
