--- a/index.html
+++ b/index.html
@@ -163,10 +163,35 @@
           src="blocks/images/header-image/header-image.png"
           alt="изображение шапки"
         />
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
       </header>
 
       <main class="content">
+        <section class="description" id="trubles-in-learning">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </p>
+              <p class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод:</span> учиться
+                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </p>
+              <p class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Эти же
+                техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
+          </div>
+        </section>
+
         <section class="techniques" id="trubles-in-learning">
           <h2 class="section-title">Техники обучения</h2>
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
@@ -182,11 +207,6 @@
                 Глубокие знания возникают, если чередовать сфокусированное и
                 рассеянное мышление.
               </p>
-              <img
-                class="cards__image"
-                src="blocks/images/cards-question.png"
-                alt="Вопросы"
-              />
             </div>
             <div class="cards__item">
               <img
@@ -199,12 +219,8 @@
                 Вспоминайте изученное — это позволит соединить разрозненные
                 порции памяти.
               </p>
-              <img
-                class="cards__image"
-                src="blocks/images/cards-competence.png"
-                alt="Книги"
-              />
             </div>
+
             <div class="cards__item">
               <img
                 class="cards__image"
@@ -215,6 +231,30 @@
               <p class="cards__description">
                 Изучайте несколько навыков одновременно, они обогащают друг
                 друга.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="blocks/images/cards-question.png"
+                alt="Вопросы"
+              />
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, который вас
+                действительно волнует.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                class="cards__image"
+                src="blocks/images/cards-competence.png"
+                alt="Книги"
+              />
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: вам только
+                кажется, что вы владеете новой темой.
               </p>
             </div>
           </div>
@@ -256,31 +296,6 @@
             </div>
           </div>
         </section>
-
-        <!--         <section class="description" id="trubles-in-learning">
-          <div class="two-columns">
-            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-            <div class="two-columns__main-text">
-              <p class="two-columns__paragraph">
-                Ни в школе, ни в институте нас не учат тому, как правильно
-                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
-                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
-                но часто в итоге это не дает нам реального знания. Зубрежка
-                быстро выветривается и не приносит пользы.
-              </p>
-              <p class="two-columns__paragraph">
-                <span class="two-columns__span-accent">Вывод:</span> учиться
-                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
-                делать?
-              </p>
-              <p class="two-columns__paragraph">
-                Конкретные техники и упражнения помогают изменить подход к
-                обучению, сделать его эффективным и захватывающим. Эти же
-                техники применяются на примере обучения в Практикуме.
-              </p>
-            </div>
-          </div>
-        </section> -->
 
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
@@ -419,7 +434,7 @@
                 Уделяйте внимание количеству и скорости.
               </p>
             </div>
-            <div class="kaufman__triangle"></div>
+            <div class="kaufman__triangle rotation"></div>
           </div>
         </section>
 
