Наведён порядок в стиле кода

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
-          <a class="header__link" href="#trubles-in-learning">Узнать &rarr;</a>
+          <a class="header__link" href="#troubles-in-learning">Узнать &rarr;</a>
         </p>
         <img
           class="header__main-illustration"
@@ -167,7 +167,7 @@
       </header>
 
       <main class="content">
-        <section class="description" id="trubles-in-learning">
+        <section class="description">
           <div class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
@@ -192,7 +192,7 @@
           </div>
         </section>
 
-        <section class="techniques" id="trubles-in-learning">
+        <section class="techniques" id="troubles-in-learning">
           <h2 class="section-title">Техники обучения</h2>
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <div class="cards">
